@@ -29,8 +29,7 @@
 // -*- mode:C++; tab-width:4; c-basic-offset:4; indent-tabs-mode:nil -*-
 // ========================================================================
 
-#include "support.h"
-
+#include <errno.h>
 #include <sstream>
 #include <cstdio>
 #include <unistd.h>
@@ -46,6 +45,7 @@
 #include "mailbox.h"
 #include "socket.h"
 #include "nls.h"
+#include "support.h"
 
 
 // ========================================================================
